<?xml version="1.0"?>
<package format="3">
  <name>activity_control_pkg</name>
  <version>0.1.0</version>
  <description>ROS2 port of the activity control tools for publishing route targets.</description>

  <maintainer email="maintainer@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>angles</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>my_carto_pkg</exec_depend>
  <exec_depend>pid_control_pkg</exec_depend>
  <exec_depend>uart_to_stm32</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
